styleシートの修正

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -50,8 +50,13 @@ li{
   }
 
   th{
-    width: 66px;
+    width: 26%;
     padding: 10px 2%;
+  }
+
+  td{
+    width:66%;
+    padding:10px 2%;
   }
 
   button{
